# lambda-aws-sso-google-sync

./: Cargo.toml  README.md  build.sh  test.json
.github/workflows/: ci.yml
src/: main.rs  sync.rs
src/google/: admin.rs
